# langchain-share

./: .gitignore  README.md  pyproject.toml
javascript/: package.json  pnpm-lock.yaml
javascript/libs/llm/: ChatGPT.ts  Ollama.ts  Qwen.ts
javascript/src/: ChatOllamaCall.ts  CompleteDemoRAG.ts  DateParser.ts  Embedding.ts  JsonOutputParser.ts  OllamaCall.ts  OutputFixingParser.ts  PromptDemo.ts  PromptTemplate.ts  RAGOffline.ts  RAGOnline.ts  SearchAPI.ts  SimpleAgent.ts  Splitter.ts  StructuredOutputParser.ts  Token.ts  WebBaseLoader.ts  ZodDemo.ts
javascript/src/utils/: index.ts
notebooks/: 1.Token和Langchain总览.ipynb  1.基础概念.ipynb  2.IO.ipynb  3.RAG.ipynb  4.Agent.ipynb  5.Chain和LCEL.ipynb
notebooks/libs/llm/: chatgpt.py  ollama.py  qwen.py
