[tool.poetry]
name = "langchain-share"
version = "0.1.0"
description = ""
authors = ["dailinzhou <zhoudailin.cser@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.1.13"
jupyterlab = "^4.2.2"
langchain-openai = "0.1.7"
dashscope = "^1.19.3"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
