[tool.poetry]
name = "langchain-share"
version = "0.1.0"
description = ""
authors = ["dailinzhou <zhoudailin.cser@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "0.1.13"
jupyterlab = "^4.2.2"
langchain-openai = "0.1.7"
dashscope = "^1.19.3"
pydantic = "^2.7.4"
bs4 = "^0.0.2"
langchain-pinecone = "^0.1.1"
ipywidgets = "^8.1.3"
langchainhub = "^0.1.20"
numexpr = "^2.10.1"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
